chore(bid): add close auction feature in bids module and add route
